fix(styles): add top padding to OrdersPage wrapper for improved spacing

--- a/src/views/ordersPage/OrdersPage.module.scss
+++ b/src/views/ordersPage/OrdersPage.module.scss
@@ -6,6 +6,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  padding-top: 16px;
 }
 
 .ordersList {
